--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -104,7 +104,7 @@
 
 "BLUE_1": "We are in an ecological disaster which includes a mass species extinction. Our death is possible, the destruction of millions and possibly billions of people, the extinction is possible, the future is not safe.",
 "BLUE_2": "The change to avert the worst disaster is still technically and economically possible. It involves creating a world which is less frenetic and more beautiful; making the necessary changes will also create jobs. This is an emergency situation - action is urgent.",
-"BLUE_3": "Our government isn't acting in accordance with what science and history tell us (eg the rise of fascism). Therefore our government is criminally negligent. ",
+"BLUE_3": "Our government isn't acting in accordance with what science and history tell us. Therefore our government is criminally negligent.",
 
 "JOIN_EMAIL" : "Join Email List",
 "FIND_LOCAL" : "Find Local Group",
