--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -11,7 +11,7 @@
 "PROVINCES_TITLE": "XR PROVINCES",
 
 "PRINCIPLE": "Principe",
-"PRINCIPLE_1":  "NOUS PARTAGONS UNE VISION COMMUNE DU CHANGEMENT",
+"PRINCIPLE_1":  "NOUS PARTAGEONS UNE VISION COMMUNE DU CHANGEMENT",
 "PRINCIPLE_2":  "NOUS FIXONS NOTRE MISSION SUR CE QUI EST NÉCESSAIRE",
 "PRINCIPLE_3":  "NOUS FAISONS LA PROMOTION D'UNE CULTURE RÉGÉNÉRATRICE",
 "PRINCIPLE_4":  "NOUS NOUS REMETTONS NOUS-MÊMES EN QUESTION, AUTANT QUE CE SYSTÈME DÉLÉTÈRE",
